video added in html file

--- a/ashu.html
+++ b/ashu.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Ashutosh kumar</title>
+    <p>kuch naya add krte h</p>
+    
   </head>
   <body>
-
+    <video src="ONE MINUTE OF PURE SATISFACTION  Compilation 1.mp4" width="600"  controls loop  ></video>
   </body>
 </html>
