--- a/ashu.html
+++ b/ashu.html
@@ -10,5 +10,6 @@
     <video src="ONE MINUTE OF PURE SATISFACTION  Compilation 1.mp4" width="600"  controls loop  ></video>
     <p>kuch aur add kru kya</p>
     <h2>new topic</h2>
+    <p>kuch kuch hota h ,tum sb samjhogi</p>
   </body>
 </html>
